# 5g-cpe-tweak

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: main.rs  models.rs  response.rs
backend/src/handlers/: at.rs  call.rs  control.rs  device.rs  mod.rs  network.rs  sms.rs  system.rs  traffic.rs  webhook.rs
backend/src/ofono/: call.rs  mod.rs  modem.rs  network.rs  sms.rs
backend/tests/: api_tests.rs
docs/: ui-redesign-plan.md
docs/superpowers/plans/: 2026-04-08-cpe-ctrl-plan.md
scripts/: build.sh  deploy.sh
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
web/src/: App.css  App.tsx  index.css
web/src/api/: index.ts
web/src/pages/: ATConsole.tsx  Call.tsx  Dashboard.tsx  Network.tsx  SMS.tsx  Settings.tsx  Traffic.tsx
