[package]
name = "cpe-ctrl"
version = "0.1.0"
edition = "2021"
authors = ["CPE Ctrl Team"]
description = "5G CPE Management System for Huawei 5G Communication Case"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["tokio", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# D-Bus
zbus = { version = "5", default-features = false, features = ["tokio"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Async utilities
futures = "0.3"

# HTTP client (for webhook)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Time
chrono = "0.4"

[profile.release]
opt-level = "z"  # Optimize for size
lto = true
codegen-units = 1
strip = true
panic = "abort"
